# eecs589_project

./: README.md
app/: Cargo.toml  Enclave_u.c  Enclave_u.h
app/src/: main.rs
enclave/: Cargo.toml  Enclave.edl  Enclave_t.c  Enclave_t.h
enclave/src/: hash.rs  lib.rs
net_test/: Cargo.toml  main  main.rs
python-prototype/: ground_segmentation.py  main.py  run.sh  transform_pcd.py  viz.py
python-prototype/configs/: display_output.json  dp-stitch-transform.json  dp-stitch.json  single.json  single_ground_segmentation.json  stitch.json
python-prototype/opv2v/: 2014_000069.txt
receiver/: receiver.py
sender/: anomaly.txt  pose.txt  sender.py
test/: 2005_000069_anomaly.txt
visualization/: Untitled.ipynb  ground_segmentation.py  viz.py
viz/: viz.py
workspace/app/: Cargo.toml  Enclave_u.c  Enclave_u.h
workspace/app/src/: main.rs
workspace/enclave/: Cargo.toml  Enclave.edl  Enclave_t.c  Enclave_t.h
workspace/enclave/src/: lib.rs
workspace/opv2v/: 2005_000069.txt  2005_000069_anomaly.txt  2014_000069_lidar_pose.txt
workspace/test/: config.json  lidar.txt  lidar_pose.txt  output.txt
